globus-dsi-rest (0.10-1+gt6.@distro@) @distro@; urgency=low

  * Add new writer for sending data from multiple write callbacks,
    optionally adding multipart mime boundaries

 -- Globus Toolkit <support@globus.org>  Tue, 12 Jul 2016 06:39:28 -0400

globus-dsi-rest (0.8-1+gt6.@distro@) @distro@; urgency=low

  * Add TRACE level data on upload
  * Explicit jansson flags
  * When using LIBTOOL in tests, dlopen library

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jun 2016 12:37:24 -0400

globus-dsi-rest (0.7-1+gt6.@distro@) @distro@; urgency=low

  * Add valgrind hook to tests
  * Change argument to globus_dsi_rest_*_gridftp_op
  * Move GridFTP range handling to DSI's responsibility
  * Fix documentation of globus_dsi_rest_write_block_arg_t
  * Rename packages
  * Add jansson-dev dependency to -dev package

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jun 2016 14:17:06 -0400

globus-dsi-rest (0.5-1+gt6.@distro@) @distro@; urgency=low

  * Add more build dependencies
  * Add GLOBUS_HOSTNAME=localhost to test environment
  * Fix non-const initializer
  * Add globus_i_dsi_rest_request_cleanup()
  * Wait for write callbacks to gridftp to arrive before completing request
  * Leak fixes in tests

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jun 2016 17:02:32 -0400

globus-dsi-rest (0.0-1+gt6.@distro@) @distro@; urgency=low

  * Initial packaging

 -- Globus Toolkit <support@globus.org>  Mon, 13 Jun 2016 10:02:03 -0400